# fastapi

./: Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 124020ec0964_added_orders_connection_to_store.py  5a19254b6f70_new_migration.py  98e9a3d14e4a_first_migration.py  b6a61bb29d52_added_all_connections.py  cff461da4b6a_added_all_connections_final.py  d82380d73012_new_migration.py
poetryapi/: crud.py  database.py  main.py  models.py  schemas.py  validators.py
