[tool.poetry]
name = "poetryapi"
version = "0.1.0"
description = ""
authors = ["Yermakhan <melanhany@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.103.1"}
fastapi-sqlalchemy = "^0.2.1"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.7"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
